# rag-chatbot-doc

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  readme.md  setup.py
app/: __init__.py  main.py
app/api/: endpoints.py
app/core/: config.py  document_processor.py  qa.py  retriever.py
app/models/: __init__.py  schemas.py
app/utils/: __init__.py  memory.py
tests/: test_api.py  test_basic.py  test_memory.py
